Add Digital and Analog
Digital and Analog

--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
+    <script src="https://irt-cdn.multiscreensite.com/556888566199487f983277011960391a/files/uploaded/flipclockv2.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    test
+    <ul id="clock">	
+        <li id="sec"></li>
+        <li id="hour"></li>
+        <li id="min"></li>
+    </ul>
+
+
+     <script src="js/app.js"></script>
 </body>
 </html>
